# nutribudget-backend

./: .env.example  .gitignore  Dockerfile  README.md  add_is_primary.sql  add_missing_mappings.sql  add_missing_nutrition.sql  add_missing_recipes.sql  add_new_recipes.sql  add_unmatched_nutrition.sql  create_active_learning.sql  create_user_interactions.sql  egypt_products_fixed.csv  fix_charset.sql  fix_nutrition_utf8.sql  fix_pepperoni.sql  fix_remaining_12.sql  insert_missing_products.sql  insert_nutrition_facts.sql  migration_chat_history.sql  migration_meal_logs.sql  migration_needs_retraining.sql  migration_weekly_meals.sql  requirements.txt
app/: __init__.py  add_is_primary.sql  config.py  database.py  main.py  pyproject.toml  sample_nutrition.csv  sample_products.csv
app/core/: security.py
app/models/: class_map.json  feedback.py  ingredient_map.py  mapping.py  meal_plan.py  nutrition.py  product.py  recipe.py  recipe_history.py  user.py
app/routers/: OtherPages.jsx  admin.py  auth.py  chat.py  feedback.py  matching.py  optimizer.py  personalize.py  products.py  profile_pipeline.py  recipes.py  users.py  vision.py
app/schemas/: optimizer.py  personalization.py  product.py  profile.py  user.py  vision.py
app/scripts/: fix_mapping_prices.py  fix_weights.py  migration_add_meal_names.py
app/services/: auth.py  bulk_upload.py  email.py  food_classifier.py  macro_calculator.py  matching.py  meal_optimizer.py  meal_search.py  nlp_parser.py  optimizer.py  personalization.py  product.py  recipe_optimizer.py  smart_ingredient_resolver.py  vision.py
app/utils/: embedding_matcher.py  fuzzy_matcher.py  normalizer.py
dataset_sql/: data_train.py  egyptian_meals.xlsx  seed_meals.py
models/exported/: class_map.json
tests/: conftest.py  requirements (2).txt  test_phase1.py  test_phase2.py  test_phase25.py  test_phase3.py  test_phase35.py  test_phase5.py
