[tool.poetry]
name        = "nutribudget-eg"
version     = "1.0.0"
description = "AI-powered dietary & cost optimiser for the Egyptian market"
authors     = ["Saif Mamdouh <saif@example.com>"]
readme      = "README.md"
python      = "^3.9"

[tool.poetry.dependencies]
python              = "^3.9"

# ── Web Framework ─────────────────────────────────────────────────
fastapi             = "^0.111.0"
uvicorn             = "^0.29.0"
streamlit           = "^1.35.0"
python-multipart    = "^0.0.9"

# ── Data / DB ─────────────────────────────────────────────────────
sqlalchemy          = "^2.0.30"
aiomysql            = "^0.2.0"
cryptography        = "^42.0.0"
pydantic            = {extras = ["email"], version = "^2.7.0"}
pydantic-settings   = "^2.3.0"
alembic             = "^1.13.0"

# ── Security ──────────────────────────────────────────────────────
bcrypt              = "^4.1.0"
passlib             = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose         = {extras = ["cryptography"], version = "^3.3.0"}

# ── NLP / Embeddings ──────────────────────────────────────────────
sentence-transformers = "^3.0.0"
fuzzywuzzy          = "^0.18.0"
python-levenshtein  = "^0.25.0"
camel-tools         = "^1.5.2"

# ── Computer Vision ───────────────────────────────────────────────
torch               = { version = "^2.3.0", source = "pytorch-cpu" }
torchvision         = { version = "^0.18.0", source = "pytorch-cpu" }
pillow              = "^10.3.0"

# ── Optimisation ──────────────────────────────────────────────────
pulp                = "^2.8.0"

# ── Visualisation ─────────────────────────────────────────────────
plotly              = "^5.22.0"
pandas              = "^2.2.0"

# ── HTTP / APIs ───────────────────────────────────────────────────
httpx               = "^0.27.0"
tenacity            = "^8.3.0"

# ── Utilities ─────────────────────────────────────────────────────
python-dotenv       = "^1.0.0"
loguru              = "^0.7.2"

[tool.poetry.group.dev.dependencies]
pytest              = "^8.2.0"
pytest-cov          = "^5.0.0"
pytest-asyncio      = "^0.23.6"
pytest-mock         = "^3.14.0"
ruff                = "^0.4.0"
mypy                = "^1.10.0"
pre-commit          = "^3.7.0"

[[tool.poetry.source]]
name     = "pytorch-cpu"
url      = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.ruff]
line-length = 100
select      = ["E", "F", "I", "UP", "B", "SIM"]
ignore      = ["E501"]

[tool.mypy]
python_version = "3.9"
strict         = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths        = ["tests"]
asyncio_mode     = "auto"
# Fixes the "Event Loop is Closed" error on Windows
asyncio_default_fixture_loop_scope = "session"
# Lowered coverage requirement to 50% for initial development phase
addopts          = "--cov=app --cov-report=term-missing --cov-fail-under=50"

[build-system]
requires      = ["poetry-core"]
build-backend = "poetry.core.masonry.api"